2008-11-16  Domi  <domi@bilbo.maison> v0.304

	* lib/Config/Augeas.pm (set): no longer dies when trying to set a
	value to 0. Only dies when the value to set is undefined.

2008-11-07  Dominique Dumont  <dominique.dumont@hp.com> v0.303

	* Build.PL: Require Augeas 0.3.4 minimum

	* t/Config-AugeasC.t: Added tests cases for save with backup and
	save without backup. Fixed sshd_config tests

2008-10-26  Dominique Dumont  <domi.dumont@free.fr> v0.302

	* t/Config-AugeasC.t: Starting from version 0.3.2, Augeas no
	longer writes a file when its data was not modified. This change
	of behavior broke this test. This test is now fixed to cope with
	this change (which makes sense).
	
2008-08-29  Dominique Dumont  <dominique.dumont@hp.com> v0.301

	* lib/Config/Augeas.pm (move): New method for Augeas 0.3.0 new
	aug_mv function. 'move' can also be called with 'mv'

2008-07-30  Dominique Dumont  <dominique.dumont@hp.com> v0.203

	* t/Config-Augeas.t: Fixed test that broke with Augeas 0.2.2

2008-07-29  Dominique Dumont  <dominique.dumont@hp.com> v0.202

	* t/Config-Augeas*.t: Removed hardcoded lense path now that this
	bug is fixed in Augeas

2008-07-28  Dominique Dumont  

	* lib/Config/Augeas.xs: Backported for Perl 5.8

	* lib/Config/Augeas.pm (insert): Can now use 'after' parameter

2008-07-20  Dominique Dumont

	* Fixed minor error in tests

	* Fix Build.PL to avoid test failure reports when augeas library
	is not installed.

2008-07-01  Dominique Dumont  v0.201

	* t/Config-Augeas*.t: Documented work-around Augeas 0.2.0
	bugs. These work-around will be removed with next version of
	Augeas.

	* lib/Config/Augeas.pm: Can now work with Perl 5.8

	* lib/Config/Augeas.xs: Fixed C90 compiler warning found on Rhel5.
	Removed hardcoded path (Thanks Alan)

	* README: Updated 

0.01  Thu Jun 12 18:35:07 2008
	- original version; created by h2xs 1.23 with options
		-n Config::AugeasC /usr/local/include/augeas.h